# framework

./: .gitignore  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  README.md
cmake/modules/: FindOsmium.cmake
proto/: compile_proto  gps_trajectory.proto
shader/: Blur.frag.glsl  Blur.vert.glsl  Default.frag.glsl  Default.vert.glsl  DefaultDepth.frag.glsl  DefaultDepth.vert.glsl  DefaultLight.frag.glsl  DefaultLight.vert.glsl  DefaultLightShadow.frag.glsl  Feedback.geom.glsl  Feedback.vert.glsl  GUI.frag.glsl  Model.frag.glsl  Model.geom.glsl  Model.vert.glsl  ModelWithWireframe.frag.glsl  ModelWithWireframe.vert.glsl  NiceGrid.frag.glsl  NiceGrid.vert.glsl  Object.frag.glsl  Object.vert.glsl  ObjectDepth.frag.glsl  ObjectDepth.vert.glsl  ObjectLines.frag.glsl  ObjectLines.vert.glsl  Spline.frag.glsl  Spline.vert.glsl  Trajectory.frag.glsl  Trajectory.vert.glsl  VideoTrajectory.frag.glsl  VideoTrajectory.vert.glsl  cc_test.frag.glsl  cc_test.vert.glsl  debug_quad.frag  debug_quad.vs  shadow_mapping.frag  shadow_mapping.vs  shadow_mapping_depth.frag  shadow_mapping_depth.vs  test.frag.glsl  (+1 more)
src/: CMakeLists.txt
src/core/: common.cpp  common.h  latlon_converter.cpp  latlon_converter.h  openstreetmap.cpp  openstreetmap.h  pcl_wrapper.cpp  pcl_wrapper.h  road_generator.cpp  road_generator.h  trajectories.cpp  trajectories.h  video_trajectory.cpp  video_trajectory.h
src/exec/: main.cpp
src/resources/: main_window.ui
src/ui/: camera.cpp  camera.h  camera_manager.cpp  camera_manager.h  color.cpp  color.h  framebuffer_object.cpp  framebuffer_object.h  framebuffer_object_multisample.cpp  framebuffer_object_multisample.h  frustum.cpp  frustum.h  light.cpp  light.h  main_window.cpp  main_window.h  nice_grid.cpp  nice_grid.h  renderable_object.cpp  renderable_object.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scene_widget.cpp  scene_widget.h  shader.cpp  shader.h  spline.cpp  spline.h  texture.cpp  texture.h  vertexbuffer_object_attribs.cpp  vertexbuffer_object_attribs.h
src/util/: global.h  headers.cpp  headers.h  mesh.cpp  mesh.h  model.cpp  model.h  model_loader_obj.cpp  model_loader_obj.h  object.cpp  object.h  primitive_shapes.cpp  primitive_shapes.h  resource_manager.cpp  resource_manager.h
